fixed: "alignments"

--- a/src/App.css
+++ b/src/App.css
@@ -1514,7 +1514,7 @@ form{
     }
 
     .about_img img{
-        width: 320px;
+        width: 100%;
         height: 400px;
         outline: none;
         outline-offset: -160px;
@@ -1532,6 +1532,7 @@ form{
 
     .about_content p{
         font-size: 25px;
+        text-align: justify;
     }
 
     .home_ribbon_container{
@@ -1578,8 +1579,13 @@ form{
         font-size: .7rem;
     }
 
+    .slider_container .bottom-quote{
+        right: 0.5rem;
+    }
+
     .slider_container .content .text{
         font-size: 20px;
+        text-align: justify;
     }
 
     .slider_container .content .star{
